# abu2025_ros2

./: CMakeLists.txt  README.md  package.xml
R1/description_r1/: asus_xtion.xacro  hokuyo.xacro  imu.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_r1.xacro
R1/params_r1/: R1_ekf.yaml  R1_hokuyo_2d.lua  R1_hokuyo_localize.lua  R1_hokuyo_mapping.lua  R1_hokuyo_mapping_2sensors.lua  R1_iRob_controller.yaml  R1_iRob_interface_esp32.yaml  R1_iRob_maneuv3r.yaml  R1_localize.lua  R1_ust.yaml  R1_ust05.yaml  R1_ust08.yaml  R1_ust08_front.yaml
R2/description_r2/: asus_xtion.xacro  hokuyo.xacro  imu.xacro  robot_core.xacro  robot_core_r2.xacro
R2/params_r2/: R2_X4-Pro.yaml  R2_complementary_config.yaml  R2_ekf.yaml  R2_hokuyo_2d.lua  R2_hokuyo_localize.lua  R2_hokuyo_mapping_2sensors.lua  R2_iRob_controller.yaml  R2_iRob_interface_esp32.yaml  R2_iRob_maneuv3r.yaml  R2_ust.yaml  R2_ust05.yaml  R2_ust08.yaml  R2_ust08_back.yaml  R2_ust08_front.yaml
launch/: carto_localization.launch.py  carto_mapping.launch.py  launch_sim.launch.py  navigation_launch.py  r1_base.launch.py  r1_hokuyo_cartographer_launch.py  r1_localize.launch.py  r1_mapping.launch.py  r1_mapping_2Hokuyo.launch.py  r1_ydlidar_odom_launch.py  r1_ydlidar_slamtoolbox_launch.py  r2_base.launch.py  r2_hokuyo_cartographer_launch.py  r2_localize.launch.py  r2_mapping.launch.py  r2_mapping_2Hokuyo.launch.py  rsp.launch.py
maps/: abu2025_map.pbstream  map.pbstream
models/abu_field/: abu_field.sdf  model.config
nodered/: flows.json  settings.js
params_global/: R1_localize_sim.lua  R1_mapping_sim.lua  irob_maneuv3r_sim_r1.yaml
rviz/: robot_view.rviz
scripts/: R1_dribble_shoot_demo1.py  R1_goto_shootGoal_direct.py  abu2025_remote.py  carto_start_trajec.py  gameplay.py  iRob_trajec_generator.py  socketABU_Pose.py
src/abu_joyInterface/: abu_joyInterface.cpp
src/gameplay_cpp/: gameplay_cpp.cpp
worlds/: my_world.sdf
