<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abu2025_ros2</name>
  <version>0.0.0</version>
  <description>ABU Robocon 2025 ROS2 package from Robot Club Engineering KMITL</description>
  <maintainer email="thipok17@gmail.com">tinlethax</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
